--- a/docker/nginx/conf.d/advanced.conf
+++ b/docker/nginx/conf.d/advanced.conf
@@ -34,3 +34,39 @@ server {
         deny all;
     }
 }
+server {
+    charset utf-8;
+    client_max_body_size 128M;
+
+    listen 8080; ## listen for ipv4
+    #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
+
+    server_name mysite.local;
+    index       index.php;
+
+    access_log  /var/log/nginx/access.log;
+    error_log   /var/log/nginx/error.log;
+
+    location / {
+        root /www/backend/web;
+        # Redirect everything that isn't a real file to index.php
+        try_files $uri $uri/ /index.php?$args;
+
+        location ~ \.php$ {
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
+            fastcgi_pass   php:9000;
+            #fastcgi_pass unix:/var/run/php5-fpm.sock;
+            #try_files $uri =404;
+        }
+    }
+    # uncomment to avoid processing of calls to non-existing static files by Yii
+    #location ~ \.(js|css|png|jpg|gif|swf|ico|pdf|mov|fla|zip|rar)$ {
+    #    try_files $uri =404;
+    #}
+    #error_page 404 /404.html;
+
+    location ~ /\.(ht|svn|git) {
+        deny all;
+    }
+}
