Update 0.4 Prepare MongoDB Change docker-compose.yml version to 3.0 Change containers config and names Change db volume Change network config Add PHP 5.6, 7.1 Add PHP extension bcmath, intl, msgpack, mongodb Update README

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,17 @@
 !/docker/php/php-fpm.conf
 !/project/dir_to_project
 !/project
-!/docker/php/build/Dockerfile
+!/docker/php/build/5.6/Dockerfile
+!/docker/php/build/5.6/
+!/docker/php/build/7.0/Dockerfile
+!/docker/php/build/7.0/
+!/docker/php/build/7.1/Dockerfile
+!/docker/php/build/7.1/
 !/docker/php/ini/zcustom.ini
 !/docker/php/ini/
+!/docker/redis/redis.conf
+!/docker/redis/
+!/docker/mongo/mongo.conf
+!/docker/mongo/
+
+
