SSL Add to Nginx conf Gzip add to Nginx conf

--- a/docker/nginx/conf.dbasic/basic.conf
+++ b/docker/nginx/conf.dbasic/basic.conf
@@ -1,36 +1,43 @@
 server {
-    charset utf-8;
-    client_max_body_size 128M;
-
-    listen 80; ## listen for ipv4
-    #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
-
     server_name mysite.local;
-    index       index.php;
-
-    access_log  /var/log/nginx/access.log;
+    listen 8080;
+	#ssl on;
+	#ssl_certificate "/var/www/httpd-cert/www-root/LetsEncript.crtca";
+	#ssl_certificate_key "/var/www/httpd-cert/www-root/LetsEncript.key";
+	#ssl_ciphers EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH;
+	#ssl_session_cache shared:SSL:5m;
+	#ssl_session_timeout 1h;
+	#ssl_prefer_server_ciphers on;
+	#ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+	add_header Strict-Transport-Security "max-age=31536000;";
+	#ssl_dhparam /etc/ssl/certs/dhparam4096.pem;
+	charset UTF-8;
+	index index.php;
+	disable_symlinks if_not_owner from=$root_path;
+	access_log  /var/log/nginx/access.log;
     error_log   /var/log/nginx/error.log;
-
-    location / {
-        root /www/web;
-        # Redirect everything that isn't a real file to index.php
-        try_files $uri $uri/ /index.php?$args;
-
-        location ~ \.php$ {
-            include fastcgi_params;
-            fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
-            fastcgi_pass   php:9000;
-            #fastcgi_pass unix:/var/run/php5-fpm.sock;
-            #try_files $uri =404;
-        }
+	set $root_path /www/web;
+	root $root_path;
+	gzip on;
+	gzip_comp_level 5;
+	gzip_disable "msie6";
+	gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript;
+	expires 14d;
+	location / {
+    		try_files $uri $uri/ /index.php?$args;
+    		#location ~ [^/]\.ph(p\d*|tml)$ {
+    		#	try_files /does_not_exists @php;
+    		#}
     }
-    # uncomment to avoid processing of calls to non-existing static files by Yii
-    #location ~ \.(js|css|png|jpg|gif|swf|ico|pdf|mov|fla|zip|rar)$ {
-    #    try_files $uri =404;
-    #}
-    #error_page 404 /404.html;
+   	location ~ \.php$ {
+                  include fastcgi_params;
+                    fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
+                    fastcgi_pass   php:9000;
+                    #fastcgi_pass unix:/var/run/php5-fpm.sock;
+                    #try_files $uri =404;
+                }
 
-    location ~ /\.(ht|svn|git) {
-        deny all;
-    }
+            location ~ /\.(ht|svn|git) {
+                deny all;
+            }
 }
